# esp-idf-yao-guai

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.old  state_fsm.md
components/lvgl/lvgl/src/lv_core/: lv_group.c  lv_indev.c  (+3 more)
components/lvgl_esp32_drivers/lvgl_touch/: ft6x36.c
components/rotary_encoder/: CMakeLists.txt  Kconfig
components/rotary_encoder/main/: rotary_encoder.c  rotary_encoder.h
main/: CMakeLists.txt  buttons_encoders.h  main.c  peripherials.h  yao-guai.h
main/btns/: yao_guai_btns.c  yao_guai_btns.h
main/core/: conf_broker.c  fsm.h  nvs_storage.c  nvs_storage.h  ui_loop.c  ui_loop.h  wifi_loop.c
main/core/ui_fsm/: header.c  lcd_demo.c  ui_display_state.c  ui_fsm.c  ui_fsm.h  ui_idle_state.c  ui_idle_view.c  ui_init_state.c  ui_settings_state.c  ui_settings_view.c  ui_wifi_scan_complete.c
main/core/wifi_fsm/: network.c  wifi_fsm.c  wifi_fsm.h
main/edJSON/: edJSON.c  edJSON.h
main/encoder/: readme.md  rotary_encoder.c  rotary_encoder.h
main/lcd/: fonts.c  fonts.h  lcd.c  lcd.h  lcd_buttons.c  lcd_driver.c  lcd_driver.h  lcd_keyboard.c  lcd_keyboard.h  lcd_primitives.c  lcd_text.c
main/lcd_spi_driver/: esp32_lcd_spi_driver.c  esp32_lcd_spi_driver.h
main/net/: network.c
main/ow_uart_driver/: ow_uart_driver.h
main/screens/: hello.c  screens.h  settings.c  show_scanned_ap.c  show_scanned_ap.h
main/tasks/: conf_broker.c  display.c  fsm.h  main_loop.c  mqtt_task.c  one_wire_task.c  ow_loop.c  ui_loop.c  wifi_loop.c
main/tasks/ui_fsm/: ui_display_state.c  ui_fsm.c  ui_fsm.h
main/tasks/wifi_fsm/: network.c  sdcard_storage.c  wifi_fsm.c  wifi_fsm.h
main/ui/: ui.h  ui_buttons.c  ui_keyboard.c  ui_keyboard.h
(+8 files in other folders)
